app/src/main/java/com/example/baseapplication/common/error/ErrorHandler.java
package com.example.baseapplication.common.error;

public interface ErrorHandler {
    void onUnknownError(String errorMessage);

    void onTimeout();

    void onNetworkError();
}
